about, history, quality page completed

--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ MAIL_HOST=ssl://smtp.googlemail.com
 MAIL_PORT=465
 MAIL_USERNAME=inr.velan@gmail.com
 MAIL_PASSWORD=hasanah2814
-_MAIL_USERNAME=vispl.framework@gmail.com
+_MAIL_USERNAME=test@gmail.com
 _MAIL_PASSWORD=jlqbvrbdrxomhtal
 MAIL_ENCRYPTION=null
 
