commit on updated pages

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="Revival"
 APP_ENV=local
 APP_KEY=base64:h9LtJHXkG7Gmo7+XApg+jwW8P17PD/ysrTPF8ATighY=
 APP_DEBUG=true
-APP_URL=http://localhost/laravel/rev
+APP_URL=
 
 LOG_CHANNEL=stack
 
