Enquiry form submit and list completed

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="Revival"
 APP_ENV=local
 APP_KEY=base64:h9LtJHXkG7Gmo7+XApg+jwW8P17PD/ysrTPF8ATighY=
 APP_DEBUG=true
-APP_URL=
+APP_URL=http://localhost/laravel/rev
 
 LOG_CHANNEL=stack
 
@@ -24,10 +24,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=ssl://smtp.googlemail.com
-MAIL_PORT=465
-MAIL_USERNAME=inr.test@gmail.com
-MAIL_PASSWORD=hasanah2814
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=587
+MAIL_USERNAME=mail2mk.dev@gmail.com
+MAIL_PASSWORD=
 _MAIL_USERNAME=test@gmail.com
 _MAIL_PASSWORD=jlqbvrbdrxomhtal
 MAIL_ENCRYPTION=null
