--- a/.env
+++ b/.env
@@ -24,16 +24,16 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.googlemail.com
-MAIL_PORT=587
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
 MAIL_USERNAME=mail2mk.dev@gmail.com
-MAIL_PASSWORD=
+MAIL_PASSWORD=mrbliulgkqtorobn  
 _MAIL_USERNAME=test@gmail.com
-_MAIL_PASSWORD=jlqbvrbdrxomhtal
+_MAIL_PASSWORD=mrbliulgkqtorobn
 MAIL_ENCRYPTION=null
 
 SUPPORT_EMAIL=support@test.com
-MAIL_FROM_ADDRESS=support@test.com
+MAIL_FROM_ADDRESS=mail2mk.dev@gmail.com
 MAIL_FROM_NAME="Test Team"
 
 AWS_ACCESS_KEY_ID=
